--- a/locales/ta.json
+++ b/locales/ta.json
@@ -183,7 +183,7 @@
 	"You can select the language in which you want to participate": "நீங்கள் பங்கேற்க விரும்பும் மொழியை நீங்கள் தேர்ந்தெடுக்கலாம்",
 	"You can change the language in which you want to read content": "உள்ளடக்கத்தைப் படிக்க விரும்பும் மொழியை நீங்கள் மாற்றலாம்",
 	"Click on the card to start contributing your voice": "உங்கள் குரலில் பங்களிக்க கார்டில் கிளிக் செய்க",
-	"Click on the card to validate what others have spoken":"மற்றவர்கள் பேசியதை சரிபார்க்க கார்டில் கிளிக் செய்க",
+	"Click on the card to validate what others have spoken": "மற்றவர்கள் பேசியதை சரிபார்க்க கார்டில் கிளிக் செய்க",
 	"Levels and Badging @BoloIndia": "நிலைகள் மற்றும் பேட்ஜிங் @BoloIndia",
 	"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate",
 	"bronze": "வெண்கலம்",
@@ -197,5 +197,11 @@
 	"Sentences": "வாக்கியங்கள்",
 	"(Recording + Validating)": "(பதிவுசெய்தல் + சரிபார்த்தல்)",
 	"Badge": "பேட்ஜ்",
-	"N/A": "பொருந்தாதது"
+	"N/A": "பொருந்தாதது",
+	"You are on a spree !!": "நீங்கள் அருமையாக செய்கிறீர்கள்!",
+	"You are driving the spirit of your language": "உங்களுடைய மொழியின் உணர்வை முன்னேற்றுவதில் நீங்கள் முனைந்துள்ளீர்கள்",
+	"You are just <span id=\"sentense_away_count\"></span> sentences away from earning your <span id=\"next_badge_name\"></span> Badge. <a href=\"/badges\">Know more</a>": "நீங்கள் <span id=\"next_badge_name\"></span> பேட்ஜை வெல்ல இன்னும் <span id=\"sentense_away_count\"></span> வாக்கியங்கள் மட்டுமே தேவை. <a href=\"/badges\">மேலும் அறிய</a>",
+	"WoaaH!! You’ve earned your <span id=\"current_badge_name\"></span> Badge": "சபாஷ்! நீங்கள் <span id=\"current_badge_name\"></span> பேட்ஜை வென்றுவிட்டீர்கள்",
+	"<span id=\"current_badge_name_1\"></span> Contributor level achieved for contributing <span id=\"current_badge_count\"></span> sentences.": "<span id=\"current_badge_count\"></span> வாக்கியங்களை பங்களித்ததற்காக <span id=\"current_badge_name_1\"></span> பங்களிப்பு நிலை கிடைத்தது",
+	"Your next goal is to reach <span id=\"next_badge_count\"></span> sentences to unlock your <span id=\"next_badge_name_1\"></span> Badge. <a href=\"/badges\">Know more</a>": "நீங்கள் <span id=\"next_badge_name_1\"></span> பேட்ஜை வெல்ல <span id=\"next_badge_count\"></span> வாக்கியங்களை அடைவதே உங்கள் அடுத்த குறிக்கோள். <a href=\"/badges\">மமேலும் அறிய</a>"
 }
