--- a/locales/te.json
+++ b/locales/te.json
@@ -202,9 +202,10 @@
 	"Badge": "బ్యాడ్జ్",
 	"N/A": "N/A",
 	"(Recording + Validatixng)": "(రికార్డింగ్ + ధ్రువీకరిస్తోంది)",
-	"You are driving the spirit of your language": "You are driving the spirit of your language",
-	"You are on a spree !!": "You are on a spree !!",
-	"WoaaH!! You’ve earned your <span id=\"badge-name-1\">1st</span> Badge": "WoaaH!! You’ve earned your <span id=\"badge-name-1\">1st</span> Badge",
-	"<span id=\"badge-name-2\">Bronze</span> Contributor level achieved for contributing <span id=\"max-badge-count\">50</span> sentences.": "<span id=\"badge-name-2\">Bronze</span> Contributor level achieved for contributing <span id=\"max-badge-count\">50</span> sentences.",
-	"Your next goal is to reach <span id=\"next-badge-count\">50</span> sentences to unlock your <span id=\"next-badge\">2nd</span> Badge. <a href=\"/badges\">Know more</a>": "Your next goal is to reach <span id=\"next-badge-count\">50</span> sentences to unlock your <span id=\"next-badge\">2nd</span> Badge. <a href=\"/badges\">Know more</a>"
+	"You are driving the spirit of your language": "మీరు మీ భాష యొక్క స్ఫూర్తిని నడుపుతున్నారు",
+	"You are on a spree !!": "మీరు స్ప్రీలో ఉన్నారు!",
+	"You are just <span id=\"sentense_away_count\"></span> sentences away from earning your <span id=\"next_badge_name\"></span> Badge. <a href=\"/badges\">Know more</a>": "మీరు <span id=\"next_badge_name\"></span> బ్యాడ్జ్ సంపాదించడానికి మీరు <span id=\"sentense_away_count\"></span> వాక్యాలు చేస్తే చాలు. <a href=\"/badges\">మరింత తెలుసుకోండి</a>",
+	"WoaaH!! You’ve earned your <span id=\"current_badge_name\"></span> Badge": "ఆహా! మీరు మీ <span id=\"current_badge_name\"></span> బ్యాడ్జ్ సంపాదించారు",
+	"<span id=\"current_badge_name_1\"></span> Contributor level achieved for contributing <span id=\"current_badge_count\"></span> sentences.": "<span id=\"current_badge_count\"></span> వాక్యాల కాంట్రిబ్యూషన్ కోసం <span id=\"current_badge_name_1\"></span> కాంట్రిబ్యూటర్ లెవల్ ని సాధించారు",
+	"Your next goal is to reach <span id=\"next_badge_count\"></span> sentences to unlock your <span id=\"next_badge_name_1\"></span> Badge. <a href=\"/badges\">Know more</a>": "మీ <span id=\"next_badge_name_1\"></span> బ్యాడ్జిని అన్\u200Cలాక్ చేయడానికి <span id=\"next_badge_count\"></span> వాక్యాలను చేరుకోవడం మీ తదుపరి లక్ష్యం. <a href=\"/badges\">మరింత తెలుసుకోండి</a>"
 }
