| priyanshu| fix missing translation for ml amd en

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,4 +1,5 @@
 {
+	"Language": "English",
 	"Speech Recognition Models": "Speech Recognition Models",
 	"About Us": "About Us",
 	"Bolo India: A crowdsourcing initiative for Indian languages": "Bolo India: A crowdsourcing initiative for Indian languages",
@@ -46,7 +47,6 @@
 	"By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>",
 	"Please validate any error message before proceeding": "Please validate any error message before proceeding",
 	"LET'S GO": "LET'S GO",
-	"Language": "Language",
 	"Quick Tips": "Quick Tips",
 	"Please test your <b>Microphone</b>": "Please test your <b>Microphone</b>",
 	"Please test your <b>Speakers</b>": "Please test your <b>Speakers</b>",
