--- a/locales/en.json
+++ b/locales/en.json
@@ -136,12 +136,9 @@
 	"Recording for 1 seconds": "Recording for 1 seconds",
 	"Playingback Audio": "Playingback Audio",
 	"Playing": "Playing",
-	"Test Mic": "Test Mic",
-	"Test Speakers": "Test Speakers",
 	"Congratulations!!! You have completed this batch of sentences": "Congratulations!!! You have completed this batch of sentences",
 	"social sharing text with rank": "I've contributed towards building open language repository for India on http://boloindia.nplt.in. You and I can make a difference by donating our voices that can help machines learn our language. Our %language language ranks %rank on Bolo India. Do your bit and empower the language?",
 	"social sharing text without rank": "I've contributed towards building open language repository for India on http://boloindia.nplt.in. You and I can make a difference by donating our voices that can help machines learn our language. Do your bit and empower the language?",
-	"SKIP": "SKIP",
 	"Next": "Next",
 	"Back": "Back",
 	"CLOSE": "CLOSE",
@@ -155,6 +152,7 @@
 	"silver": "silver",
 	"gold": "gold",
 	"platinum": "platinum",
-	"N/A": "N/A"
-
+	"N/A": "N/A",
+	"Bolo India: A crowdsourcing initiative for Indian languages.": "Bolo India: A crowdsourcing initiative for Indian languages.",
+	"I've contributed towards building open language repository for India on https://boloindia.nplt.in You and I can make a difference by donating our voices that can help machines learn our language and interact with us through great linguistic applications. Do your bit and empower the language?": "I've contributed towards building open language repository for India on https://boloindia.nplt.in You and I can make a difference by donating our voices that can help machines learn our language and interact with us through great linguistic applications. Do your bit and empower the language?"
 }
