| priyanshu| make first letter of each reward capital

--- a/locales/en.json
+++ b/locales/en.json
@@ -112,7 +112,7 @@
 	"WooHoo!! You took the first important step": "WooHoo!! You took the first important step",
 	"You are driving the spirit of your language": "You are driving the spirit of your language",
 	"recordings contributed": "recordings contributed",
-	"You are just <span id=\"sentense_away_count\"></span> sentences away from earning your <span id=\"next_badge_name\"></span> Badge. <a href=\"/badges\">Know more</a>": "You are just <span id=\"sentense_away_count\"></span> sentences away from earning your <span id=\"next_badge_name\"></span> Badge. <a href=\"/badges\">Know more</a>",
+	"You are just <span id=\"sentense_away_count\"></span> sentences away from earning your <span id=\"next_badge_name\"></span> Badge. <a href=\"/badges\">Know more</a>": "You are just <span id=\"sentense_away_count\"></span> sentences away from earning your <span id=\"next_badge_name\"></span> badge. <a href=\"/badges\">Know more</a>",
 	"National Language Translation Mission": "National Language Translation Mission",
 	"Download": "Download",
 	"WoaaH!! You’ve earned your <span id=\"current_badge_name\"></span> Badge": "WoaaH!! You’ve earned your <span id=\"current_badge_name\"></span> Badge",
@@ -148,11 +148,18 @@
 	"Click on the card to validate what others have spoken": "Click on the card to validate what others have spoken",
 	"Level": "Level",
 	"Sentences": "Sentences",
-	"bronze": "bronze",
-	"silver": "silver",
-	"gold": "gold",
-	"platinum": "platinum",
+	"bronze": "Bronze",
+	"silver": "Silver",
+	"gold": "Gold",
+	"platinum": "Platinum",
 	"N/A": "N/A",
 	"Bolo India: A crowdsourcing initiative for Indian languages.": "Bolo India: A crowdsourcing initiative for Indian languages.",
-	"I've contributed towards building open language repository for India on https://boloindia.nplt.in You and I can make a difference by donating our voices that can help machines learn our language and interact with us through great linguistic applications. Do your bit and empower the language?": "I've contributed towards building open language repository for India on https://boloindia.nplt.in You and I can make a difference by donating our voices that can help machines learn our language and interact with us through great linguistic applications. Do your bit and empower the language?"
+	"I've contributed towards building open language repository for India on https://boloindia.nplt.in You and I can make a difference by donating our voices that can help machines learn our language and interact with us through great linguistic applications. Do your bit and empower the language?": "I've contributed towards building open language repository for India on https://boloindia.nplt.in You and I can make a difference by donating our voices that can help machines learn our language and interact with us through great linguistic applications. Do your bit and empower the language?",
+	"Levels and Badging @BoloIndia": "Levels and Badging",
+	"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate",
+	"Contributor Levels": "Contributor Levels",
+	"Participate more to gain badges": "Participate more to gain badges",
+	"Contributions": "Contributions",
+	"(Recording + Validating)": "(Recording + Validating)",
+	"Badge": "Badge"
 }
