| priyanshu| remove @boloIndia from badges detail page

--- a/locales/bn.json
+++ b/locales/bn.json
@@ -281,7 +281,7 @@
 	"You can change the language in which you want to read content": "আপনি ভাষা বদলাতে পারেন যাতে আপনি যে বিষয় পড়তে চান",
 	"Click on the card to start contributing your voice": "আপনার স্বর অবদান শুরু করতে কার্ড-এ ক্লিক করুন",
 	"Click on the card to validate what others have spoken": "অন্যেরা কে কি বলেছে তা যাচাই করতে কার্ড-এ ক্লিক করুন",
-	"Levels and Badging @BoloIndia": "স্তর ও ব্যাজিং @BoloIndia",
+	"Levels and Badging @BoloIndia": "স্তর ও ব্যাজিং",
 	"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate",
 	"bronze": "ব্রোঞ্চ",
 	"silver": "রৌপ্য",
