--- a/locales/gu.json
+++ b/locales/gu.json
@@ -185,7 +185,7 @@
 	"You can change the language in which you want to read content": "તમે જેમાં સામગ્રી વાંચવા માંગતા હોવ તે ભાષા બદલી શકો છો",
 	"Click on the card to start contributing your voice": "તમારા અવાજનો ફાળો આપવા માટે કાર્ડ પર ક્લિક કરો",
 	"Click on the card to validate what others have spoken": "અન્ય લોકો બોલ્યા હોય તેને માન્યતા આપવા માટે કાર્ડ પર ક્લિક કરો",
-	"Levels and Badging @BoloIndia": "લેવલ્સ અને બેજિંગ @BoloIndia",
+	"Levels and Badging @BoloIndia": "લેવલ્સ અને બેજિંગ",
 	"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate",
 	"bronze": "બ્રોન્ઝ",
 	"silver": "સિલ્વર",
