--- a/locales/te.json
+++ b/locales/te.json
@@ -187,7 +187,7 @@
 	"You can change the language in which you want to read content": "మీరు కంటెంట్ చదవాలనుకుంటున్న భాషను మార్చవచ్చు",
 	"Click on the card to start contributing your voice": "మీ వాయిస్‌కు సహకారం అందించడం ప్రారంభించడానికి కార్డ్ పై క్లిక్ చేయండి",
 	"Click on the card to validate what others have spoken": "ఇతరులు మాట్లాడిన వాటిని ధృవీకరించడానికి కార్డుపై క్లిక్ చేయండి",
-	"Levels and Badging @BoloIndia": "లెవల్స్ మరియు బ్యాడ్జింగ్ @BoloIndia",
+	"Levels and Badging @BoloIndia": "లెవల్స్ మరియు బ్యాడ్జింగ్",
 	"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate",
 	"bronze": "బ్రాంజ్",
 	"silver": "సిల్వర్",
