--- a/locales/ml.json
+++ b/locales/ml.json
@@ -234,7 +234,7 @@
 	"Most Contributed - <span id=\"languageId\"></span>": "ഏറ്റവും കൂടുതൽ സംഭാവന ചെയ്തത് - <span id=\"languageId\"></span>",
 	"Data recorded for <span id=\"languageChoiceId\"></span>": "<span id=\"languageChoiceId\"></span> ഡാറ്റ രേഖപ്പെടുത്തിയിരിക്കുന്നു",
 	"Gender Distribution": "ലിംഗഭേദമനുസരിച്ചുള്ള ക്രമം",
-	"Levels and Badging @BoloIndia": "ലെവലും ബാഡ്ജിംഗും @പറയൂ ഇന്ത്യ",
+	"Levels and Badging @BoloIndia": "ലെവലും ബാഡ്ജിംഗും",
 	"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate",
 	"bronze": "വെങ്കലം",
 	"silver": "വെള്ളി",
