--- a/locales/or.json
+++ b/locales/or.json
@@ -250,7 +250,7 @@
 	"You can change the language in which you want to read content": "ଆପଣ ଯେଉଁ ଭାଷା ବିଷୟବସ୍ତୁ ପଢିବାକୁ ଚାହୁଁଛନ୍ତି ସେହି ଭାଷାକୁ ଆପଣ ପରିବର୍ତ୍ତନ କରିପାରିବେ",
 	"Click on the card to start contributing your voice": "ତୁମର ସ୍ୱର ପ୍ରଦାନ ଆରମ୍ଭ କରିବା ପାଇଁ କାର୍ଡ ଉପରେ କ୍ଲିକ୍ କର",
 	"Click on the card to validate what others have spoken": "ଅନ୍ୟମାନେ ଯାହା କହିଛନ୍ତି ତାହା ବୈଧ କରିବାକୁ କାର୍ଡରେ କ୍ଲିକ୍ କରନ୍ତୁ",
-	"Levels and Badging @BoloIndia": "ସ୍ତର ଏବଂ ବ୍ୟାଜ୍ @ ବୋଲୋ ଇଣ୍ଡିଆ",
+	"Levels and Badging @BoloIndia": "ସ୍ତର ଏବଂ ବ୍ୟାଜ୍",
 	"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate",
 	"bronze": "ପିତ୍ତଳ",
 	"silver": "ରୂପା",
