| priyanshu| make header and footer of badges details page consistent

--- a/locales/as.json
+++ b/locales/as.json
@@ -292,6 +292,7 @@
 	"Click on the card to start contributing your voice": "আপোনাৰ কণ্ঠস্বৰৰ অৱদান আৰম্ভ কৰিবলৈ কাৰ্ডত ক্লিক কৰক",
 	"Click on the card to validate what others have spoken": "আনসকলে কি কৈছে সেয়া বৈধকৰণ কৰিবলৈ কাৰ্ডত ক্লিক কৰক",
 	"Levels and Badging @BoloIndia": "স্তৰসমূহ আৰু বেজবোৰ",
+	"Levels and Badging": "স্তৰসমূহ আৰু বেজবোৰ",
 	"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate",
 	"bronze": "ব্ৰঞ্জ",
 	"silver": "ৰূপ",
