--- a/locales/en.json
+++ b/locales/en.json
@@ -156,6 +156,7 @@
 	"Bolo India: A crowdsourcing initiative for Indian languages.": "Bolo India: A crowdsourcing initiative for Indian languages.",
 	"I've contributed towards building open language repository for India on https://boloindia.nplt.in You and I can make a difference by donating our voices that can help machines learn our language and interact with us through great linguistic applications. Do your bit and empower the language?": "I've contributed towards building open language repository for India on https://boloindia.nplt.in You and I can make a difference by donating our voices that can help machines learn our language and interact with us through great linguistic applications. Do your bit and empower the language?",
 	"Levels and Badging @BoloIndia": "Levels and Badging",
+	"Levels and Badging": "Levels and Badging",
 	"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate",
 	"Contributor Levels": "Contributor Levels",
 	"Participate more to gain badges": "Participate more to gain badges",
