--- a/locales/hi.json
+++ b/locales/hi.json
@@ -240,6 +240,7 @@
 	"Click on the card to start contributing your voice": "अपनी आवाज़ का योगदान देना शुरू करने के लिए कार्ड पर क्लिक करें",
 	"Click on the card to validate what others have spoken": "दूसरे लोगों ने जो बोला है उसकी पुष्टि करने के लिए कार्ड पर क्लिक करें",
 	"Levels and Badging @BoloIndia": "लेवल और बैज",
+	"Levels and Badging": "लेवल और बैज",
 	"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate",
 	"bronze": "ब्रॉन्ज",
 	"silver": "सिल्वर",
