--- a/locales/kn.json
+++ b/locales/kn.json
@@ -208,6 +208,7 @@
 	"Click on the card to start contributing your voice": "ನಿಮ್ಮ ಧ್ವನಿಯನ್ನು ನೀಡುವುದನ್ನು ಪ್ರಾರಂಭಿಸಲು ಕಾರ್ಡ್ ಮೇಲೆ ಕ್ಲಿಕ್ ಮಾಡಿ",
 	"Click on the card to validate what others have spoken": "ಇತರರು ಮಾತನಾಡಿದುದನ್ನು ಮೌಲ್ಯೀಕರಿಸಲು ಕಾರ್ಡ್ ಮೇಲೆ ಕ್ಲಿಕ್ ಮಾಡಿ",
 	"Levels and Badging @BoloIndia": "ಲೆವೆಲ್ಯ್ ಆಂಡ್ ಬ್ಯಾಜಿಂಗ್",
+	"Levels and Badging": "ಲೆವೆಲ್ಯ್ ಆಂಡ್ ಬ್ಯಾಜಿಂಗ್",
 	"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate",
 	"bronze": "ಕಂಚು",
 	"silver": "ಬೆಳ್ಳಿ",
