--- a/locales/ml.json
+++ b/locales/ml.json
@@ -235,6 +235,7 @@
 	"Data recorded for <span id=\"languageChoiceId\"></span>": "<span id=\"languageChoiceId\"></span> ഡാറ്റ രേഖപ്പെടുത്തിയിരിക്കുന്നു",
 	"Gender Distribution": "ലിംഗഭേദമനുസരിച്ചുള്ള ക്രമം",
 	"Levels and Badging @BoloIndia": "ലെവലും ബാഡ്ജിംഗും",
+	"Levels and Badging": "ലെവലും ബാഡ്ജിംഗും",
 	"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate",
 	"bronze": "വെങ്കലം",
 	"silver": "വെള്ളി",
