--- a/locales/mr.json
+++ b/locales/mr.json
@@ -185,6 +185,7 @@
 	"Click on the card to start contributing your voice": "आपल्या आवाजाचे योगदान देण्याची सुरू करण्यासाठी कार्डवर क्लिक करा",
 	"Click on the card to validate what others have spoken": "इतरांनी जे बोलले आहे ते प्रमाणित करण्यासाठी कार्डवर क्लिक करा",
 	"Levels and Badging @BoloIndia": "लेवर आणि बॅज",
+	"Levels and Badging": "लेवर आणि बॅज",
 	"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate",
 	"bronze": "ब्रॉन्झ",
 	"silver": "सिल्वर",
