--- a/locales/pa.json
+++ b/locales/pa.json
@@ -275,6 +275,7 @@
 	"Click on the card to start contributing your voice": "ਆਪਣੀ ਆਵਾਜ਼ ਵਿੱਚ ਯੋਗਦਾਨ ਪਾਉਣਾ ਸ਼ੁਰੂ ਕਰਨ ਲਈ ਕਾਰਡ ਉੱਤੇ ਕਲਿੱਕ ਕਰੋ",
 	"Click on the card to validate what others have spoken": "ਹੋਰਾਂ ਵਲੋਂ ਬੋਲੇ ਗਏ ਨੂੰ ਪ੍ਰਮਾਣਿਤ ਕਰਨ ਲਈ ਕਾਰਡ ਉੱਤੇ ਕਲਿੱਕ ਕਰੋ",
 	"Levels and Badging @BoloIndia": "ਪੱਧਰ ਤੇ ਬਿੱਲੇ",
+	"Levels and Badging": "ਪੱਧਰ ਤੇ ਬਿੱਲੇ",
 	"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate",
 	"bronze": "ਕਾਂਸੀ",
 	"silver": "ਚਾਂਦੀ",
