--- a/locales/ta.json
+++ b/locales/ta.json
@@ -185,6 +185,7 @@
 	"Click on the card to start contributing your voice": "உங்கள் குரலில் பங்களிக்க கார்டில் கிளிக் செய்க",
 	"Click on the card to validate what others have spoken": "மற்றவர்கள் பேசியதை சரிபார்க்க கார்டில் கிளிக் செய்க",
 	"Levels and Badging @BoloIndia": "நிலைகள் மற்றும் பேட்ஜிங்",
+	"Levels and Badging": "நிலைகள் மற்றும் பேட்ஜிங்",
 	"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate",
 	"bronze": "வெண்கலம்",
 	"silver": "வெள்ளி",
