--- a/locales/or.json
+++ b/locales/or.json
@@ -172,8 +172,8 @@
 	"Playing": "ପ୍ଲେ ହେଉଛି",
 	"Help your own language": "ନିଜ ଭାଷାକୁ ସାହାଯ୍ୟ କର",
 	"Quick Tips": "କୁଇକ୍‌ ଟିପ୍ସ",
-	"Transgender - He": "ଟ୍ରାନ୍ସଜେଣ୍ଡର-ସେ",
-	"Transgender - She": "ଟ୍ରାନ୍ସଜେଣ୍ଡର-ସେ",
+	"Transgender - He": "ଟ୍ରାନ୍ସଜେଣ୍ଡର - ପୁରୁଷ",
+	"Transgender - She": "ଟ୍ରାନ୍ସଜେଣ୍ଡର - ସ୍ତ୍ରୀ",
 	"Rather Not Say": "ବରଂ କୁହ ନାହିଁ",
 	"You are a champion": "ଆପଣ ଜଣେ ଚାମ୍ପିଅନ୍",
 	"WooHoo!! You took the first important step": "ଓହୋ !! ଆପଣ ପ୍ରଥମ ଗୁରୁତ୍ୱପୂର୍ଣ୍ଣ ପଦକ୍ଷେପ ନେଇଛନ୍ତି",
@@ -250,7 +250,7 @@
 	"You can change the language in which you want to read content": "ଆପଣ ଯେଉଁ ଭାଷା ବିଷୟବସ୍ତୁ ପଢିବାକୁ ଚାହୁଁଛନ୍ତି ସେହି ଭାଷାକୁ ଆପଣ ପରିବର୍ତ୍ତନ କରିପାରିବେ",
 	"Click on the card to start contributing your voice": "ତୁମର ସ୍ୱର ପ୍ରଦାନ ଆରମ୍ଭ କରିବା ପାଇଁ କାର୍ଡ ଉପରେ କ୍ଲିକ୍ କର",
 	"Click on the card to validate what others have spoken": "ଅନ୍ୟମାନେ ଯାହା କହିଛନ୍ତି ତାହା ବୈଧ କରିବାକୁ କାର୍ଡରେ କ୍ଲିକ୍ କରନ୍ତୁ",
-	"Levels and Badging @BoloIndia": "ସ୍ତର ଏବଂ ବ୍ୟାଜ୍",
+	"Levels and Badging": "ସ୍ତର ଏବଂ ବ୍ୟାଜ୍",
 	"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate",
 	"bronze": "ପିତ୍ତଳ",
 	"silver": "ରୂପା",
@@ -269,5 +269,7 @@
 	"You are just <span id=\"sentense_away_count\"></span> sentences away from earning your <span id=\"next_badge_name\"></span> Badge. <a href=\"/badges\">Know more</a>": "ଆପଣ <span id=\"next_badge_name\"></span> ବ୍ୟାଜ୍ ପାଇବା ଠାରୁ କେବଳ <span id=\"sentense_away_count\"></span> ବାକ୍ୟ ଦୂରରେ ଅଛନ୍ତି। <a href=\"/badges\">ଅଧିକ ଜାଣନ୍ତୁ।</a>",
 	"WoaaH!! You’ve earned your <span id=\"current_badge_name\"></span> Badge": "ଓ ! ଆପଣ <span id=\"current_badge_name\"></span> ବ୍ୟାଜ୍ ଅର୍ଜନ କରିଛନ୍ତି।",
 	"<span id=\"current_badge_name_1\"></span> Contributor level achieved for contributing <span id=\"current_badge_count\"></span> sentences.": "<span id=\"current_badge_count\"></span> ବାକ୍ୟଗୁଡିକ ଯୋଗଦାନ ପାଇଁ ଯୋଗଦାନକାରୀ ସ୍ତର ହାସଲ",
-	"Your next goal is to reach <span id=\"next_badge_count\"></span> sentences to unlock your <span id=\"next_badge_name_1\"></span> Badge. <a href=\"/badges\">Know more</a>": "ଆପଣଙ୍କର ପରବର୍ତ୍ତୀ ଲକ୍ଷ୍ୟ ହେଉଛି <span id=\"next_badge_name_1\"></span> ବ୍ୟାଜ୍ ଅନଲକ୍ କରି <span id=\"next_badge_count\"></span> ବାକ୍ୟରେ ପହଞ୍ଚିବା । <a href=\"/badges\">ଅଧିକ ଜାଣନ୍ତୁ।</a>"
+	"Your next goal is to reach <span id=\"next_badge_count\"></span> sentences to unlock your <span id=\"next_badge_name_1\"></span> Badge. <a href=\"/badges\">Know more</a>": "ଆପଣଙ୍କର ପରବର୍ତ୍ତୀ ଲକ୍ଷ୍ୟ ହେଉଛି <span id=\"next_badge_name_1\"></span> ବ୍ୟାଜ୍ ଅନଲକ୍ କରି <span id=\"next_badge_count\"></span> ବାକ୍ୟରେ ପହଞ୍ଚିବା । <a href=\"/badges\">ଅଧିକ ଜାଣନ୍ତୁ।</a>",
+	"Bolo India: A crowdsourcing initiative for Indian languages.": "Bolo India: A crowdsourcing initiative for Indian languages.",
+	"I've contributed towards building open language repository for India on https://boloindia.nplt.in You and I can make a difference by donating our voices that can help machines learn our language and interact with us through great linguistic applications. Do your bit and empower the language?": "I've contributed towards building open language repository for India on https://boloindia.nplt.in You and I can make a difference by donating our voices that can help machines learn our language and interact with us through great linguistic applications. Do your bit and empower the language?"
 }
