--- a/locales/en.json
+++ b/locales/en.json
@@ -162,5 +162,23 @@
 	"Participate more to gain badges": "Participate more to gain badges",
 	"Contributions": "Contributions",
 	"(Recording + Validating)": "(Recording + Validating)",
-	"Badge": "Badge"
+	"Badge": "Badge",
+	"All Languages": "All Languages",
+	"Data Last Updated": "Data Last Updated",
+	"We do not have any data for this language, would you like to contribute for it?": "We do not have any data for this language, would you like to contribute for it?",
+	"Contribute Now": "Contribute Now",
+	"hours validated": "hours validated",
+	"Progress Chart": "Progress Chart",
+	"Monthly": "Monthly",
+	"Quarterly": "Quarterly",
+	"Gender Distribution": "Gender Distribution",
+	"State Wise distribution": "State Wise distribution",
+	"Age Group Distribution": "Age Group Distribution",
+	"Subject": "Subject",
+	"Description": "Description",
+	"Please type here...": "Please type here...",
+	"Failed to submit the feedback. Please try again.": "Failed to submit the feedback. Please try again.",
+	"Thank You for your valuable feedback": "Thank You for your valuable feedback",
+	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback": "Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback",
+	"Back to Home": "Back to Home"
 }
