| priyanshu| trying adding translation to linkedIn title

--- a/locales/en.json
+++ b/locales/en.json
@@ -184,5 +184,29 @@
 	"Failed to submit the feedback. Please try again.": "Failed to submit the feedback. Please try again.",
 	"Thank You for your valuable feedback": "Thank You for your valuable feedback",
 	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback": "Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback",
-	"Back to Home": "Back to Home"
+	"Back to Home": "Back to Home",
+	"By proceeding ahead you agree to the <a href=\"./terms-and-conditions.html\"> Terms and Conditions</a>": "By proceeding ahead you agree to the <a href=\"./terms-and-conditions.html\"> Terms and Conditions</a>",
+	"You are just <span id=\"sentense_away_count\"></span> sentences away from earning your <span id=\"next_badge_name\"></span> Badge. <a href=\"./badges.html\">Know more</a>": "You are just <span id=\"sentense_away_count\"></span> sentences away from earning your <span id=\"next_badge_name\"></span> Badge. <a href=\"./badges.html\">Know more</a>",
+	"Your next goal is to reach <span id=\"next_badge_count\"></span> sentences to unlock your <span id=\"next_badge_name_1\"></span> Badge. <a href=\"./badges.html\">Know more</a>": "Your next goal is to reach <span id=\"next_badge_count\"></span> sentences to unlock your <span id=\"next_badge_name_1\"></span> Badge. <a href=\"./badges.html\">Know more</a>",
+	"Instructions": "Instructions",
+	"Thank you for your enthusiasm to validate the recordings.": "Thank you for your enthusiasm to validate the recordings.",
+	"We do not have any data in <span id=\"spn-validation-language\"></span> language. Please try again later.": "We do not have any data in <span id=\"spn-validation-language\"></span> language. Please try again later.",
+	"Would you also like to contribute your voice?": "Would you also like to contribute your voice?",
+	"Start Contributing in <span id=\"start-validation-language\"></span>": "Start Contributing in <span id=\"start-validation-language\"></span>",
+	"Thank you for validating!": "Thank you for validating!",
+	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings",
+	"Validate More": "Validate More",
+	"Incorrect": "Incorrect",
+	"Play": "Play",
+	"Replay": "Replay",
+	"Pause": "Pause",
+	"Correct": "Correct",
+	"Skip": "Skip",
+	"Validating Instructions": "Validating Instructions",
+	"Please test your <b>speakers</b>": "Please test your <b>speakers</b>",
+	"Ensure the voice is <b>clear and audible</b>": "Ensure the voice is <b>clear and audible</b>",
+	"Match the voice to the text <b>accurately</b>": "Match the voice to the text <b>accurately</b>",
+	"If you are unsure of the match, skip the particular voice sample": "If you are unsure of the match, skip the particular voice sample",
+	"START": "START",
+	"Help us understand what’s wrong with the recording": "Help us understand what’s wrong with the recording"
 }
