--- a/locales/mnibn.json
+++ b/locales/mnibn.json
@@ -120,5 +120,94 @@
 	"If you are unsure of the match, skip the particular voice sample": "করিগুম্বা অদোম্না চান্নদ্রে হায়না চিংনরবদি, ভোইস সেম্পল অদু কান্থোকপীয়ু",
 	"By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>",
 	"Help your own language": "Help your own language",
-	"Congratulations!!! You have completed this batch of sentences": "Congratulations!!! You have completed this batch of sentences"
+	"Congratulations!!! You have completed this batch of sentences": "Congratulations!!! You have completed this batch of sentences",
+	"Bolo India: A crowdsourcing initiative for Indian languages": "Bolo India: A crowdsourcing initiative for Indian languages",
+	"India needs to be Atma Nirbhar in the area of speech recognition in Indian languages. Hence, we want to create an open data repository of many Indian voices. This is an effort by MeitY, Government of India, under the National Language Translation Mission (NLTM). This effort is supported by EkStep Foundation on a pro-bono basis and leverages its open source work under <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> along with various other open source frameworks.": "India needs to be Atma Nirbhar in the area of speech recognition in Indian languages. Hence, we want to create an open data repository of many Indian voices. This is an effort by MeitY, Government of India, under the National Language Translation Mission (NLTM). This effort is supported by EkStep Foundation on a pro-bono basis and leverages its open source work under <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> along with various other open source frameworks.",
+	"Bolo India invites you to volunteer and contribute your voice for this cause. All your contributions are automatically processed and made available as open data in a useful fashion back to the community. Such data then can be used by all language enthusiasts and technologists to develop world class speech recognition applications.": "Bolo India invites you to volunteer and contribute your voice for this cause. All your contributions are automatically processed and made available as open data in a useful fashion back to the community. Such data then can be used by all language enthusiasts and technologists to develop world class speech recognition applications.",
+	"India is a land of many languages, our digital strategy must reflect it.": "India is a land of many languages, our digital strategy must reflect it.",
+	"90% of India's population uses region languages to conduct their day-to-day activities.": "90% of India's population uses region languages to conduct their day-to-day activities.",
+	"As more and more people use digital platforms for financial, educational and social activities, digital platforms must work seamlessly in Indian Languages.": "As more and more people use digital platforms for financial, educational and social activities, digital platforms must work seamlessly in Indian Languages.",
+	"We need to build speech recognition technologies that are tuned for your language.  It must have high accuracy and understand the daily language and communications of people in your language.": "We need to build speech recognition technologies that are tuned for your language.  It must have high accuracy and understand the daily language and communications of people in your language.",
+	"Having open world class speech recognition in your language will enable a digital first model in your language in various sectors such as: education, healthcare and media.": "Having open world class speech recognition in your language will enable a digital first model in your language in various sectors such as: education, healthcare and media.",
+	"The tools, utilities and models  proposed to be developed in your language will rely on open source contributions through Bolo India crowd sourcing platform": "The tools, utilities and models  proposed to be developed in your language will rely on open source contributions through Bolo India crowd sourcing platform",
+	"Speech recognition relies on \"machine-learning\" technology that requires large datasets that include diverse voices and the corresponding text. Through Bolo India, we want to create a diverse open repository of Indian voices speaking Indian languages which can be used for this initiative": "Speech recognition relies on \"machine-learning\" technology that requires large datasets that include diverse voices and the corresponding text. Through Bolo India, we want to create a diverse open repository of Indian voices speaking Indian languages which can be used for this initiative",
+	"We are inviting you to join us and voluntarily contribute your voice to this initiative. Recording your voice at one stretch can be overwhelming hence you can do this by visiting the website multiple times and commence from where you left us off": "We are inviting you to join us and voluntarily contribute your voice to this initiative. Recording your voice at one stretch can be overwhelming hence you can do this by visiting the website multiple times and commence from where you left us off",
+	"Select a language": "Select a language",
+	"START CONTRIBUTING": "START CONTRIBUTING",
+	"Feedback": "Feedback",
+	"Transgender - He": "Transgender - He",
+	"Transgender - She": "Transgender - She",
+	"Rather Not Say": "Rather Not Say",
+	"By proceeding ahead you agree to the <a href=\"./terms-and-conditions.html\"> Terms and Conditions</a>": "By proceeding ahead you agree to the <a href=\"./terms-and-conditions.html\"> Terms and Conditions</a>",
+	"Please validate any error message before proceeding": "Please validate any error message before proceeding",
+	"Levels and Badging": "Levels and Badging",
+	"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore etdolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate",
+	"Contributor Levels": "Contributor Levels",
+	"Participate more to gain badges": "Participate more to gain badges",
+	"Level": "Level",
+	"Contributions": "Contributions",
+	"(Recording + Validating)": "(Recording + Validating)",
+	"Badge": "Badge",
+	"Gender Distribution": "Gender Distribution",
+	"Select the language for voluntary contribution": "Select the language for voluntary contribution",
+	"Subject": "Subject",
+	"Description": "Description",
+	"Please type here...": "Please type here...",
+	"Failed to submit the feedback. Please try again.": "Failed to submit the feedback. Please try again.",
+	"SUBMIT": "SUBMIT",
+	"Thank You for your valuable feedback": "Thank You for your valuable feedback",
+	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback": "Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback",
+	"Back to Home": "Back to Home",
+	"I've contributed towards building open language repository for India on https://boloindia.nplt.in You and I can make a difference by donating our voices that can help machines learn our language and interact with us through great linguistic applications. Do your bit and empower the language?": "I've contributed towards building open language repository for India on https://boloindia.nplt.in You and I can make a difference by donating our voices that can help machines learn our language and interact with us through great linguistic applications. Do your bit and empower the language?",
+	"Speak": "Speak",
+	"Validate What They Say": "Validate What They Say",
+	"Help us by validating the recordings that others have contributed": "Help us by validating the recordings that others have contributed",
+	"India needs to be Aatmanirbhar in the area of speech recognition in Indian languages.  Hence, we want to create an open data repository of many Indian voices. Bolo India invites you to volunteer contribute your voice for this cause.": "India needs to be Aatmanirbhar in the area of speech recognition in Indian languages.  Hence, we want to create an open data repository of many Indian voices. Bolo India invites you to volunteer contribute your voice for this cause.",
+	"Oops": "Oops",
+	"Page Not Found": "Page Not Found",
+	"Looks like you have taken a wrong turn here": "Looks like you have taken a wrong turn here",
+	"<a class=\"\" href=\"/\">Click Here</a> to go back to home page": "<a class=\"\" href=\"/\">Click Here</a> to go back to home page",
+	"Quick Tips": "Quick Tips",
+	"Read once <b>before recording it</b>": "Read once <b>before recording it</b>",
+	"Report": "Report",
+	"Test your Microphone and Speakers": "Test your Microphone and Speakers",
+	"Test Mic": "Test Mic",
+	"Please speak clearly": "Please speak clearly",
+	"Low/No Background Noise": "Low/No Background Noise",
+	"Background Noise Detected": "Background Noise Detected",
+	"Test Speakers": "Test Speakers",
+	"Report Content": "Report Content",
+	"Help us understand what’s wrong with the sentence": "Help us understand what’s wrong with the sentence",
+	"Offensive": "Offensive",
+	"Hurting sentiments of religion, community or abusive content etc.": "Hurting sentiments of religion, community or abusive content etc.",
+	"Prohibited Content": "Prohibited Content",
+	"Hateful / Discriminatory / Vulgar language, drugs promotion etc.": "Hateful / Discriminatory / Vulgar language, drugs promotion etc.",
+	"Political Statement": "Political Statement",
+	"Hateful Political views, amplifying hate-speech etc.": "Hateful Political views, amplifying hate-speech etc.",
+	"Misinformation": "Misinformation",
+	"Hearsay / Rumors, deliberate falsified facts etc.": "Hearsay / Rumors, deliberate falsified facts etc.",
+	"Please specify the reason (Optional)": "Please specify the reason (Optional)",
+	"Thank You": "Thank You",
+	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback.": "Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback.",
+	"You are a champion": "You are a champion",
+	"You are on a spree !!": "You are on a spree !!",
+	"WooHoo!! You took the first important step": "WooHoo!! You took the first important step",
+	"You are driving the spirit of your language": "You are driving the spirit of your language",
+	"recordings contributed": "recordings contributed",
+	"You are just <span id=\"sentense_away_count\"></span> sentences away from earning your <span id=\"next_badge_name\"></span> Badge. <a href=\"./badges.html\">Know more</a>": "You are just <span id=\"sentense_away_count\"></span> sentences away from earning your <span id=\"next_badge_name\"></span> Badge. <a href=\"./badges.html\">Know more</a>",
+	"National Language Translation Mission": "National Language Translation Mission",
+	"Download": "Download",
+	"WoaaH!! You’ve earned your <span id=\"current_badge_name\"></span> Badge": "WoaaH!! You’ve earned your <span id=\"current_badge_name\"></span> Badge",
+	"<span id=\"current_badge_name_1\"></span> Contributor level achieved for contributing <span id=\"current_badge_count\"></span> sentences.": "<span id=\"current_badge_name_1\"></span> Contributor level achieved for contributing <span id=\"current_badge_count\"></span> sentences.",
+	"Your next goal is to reach <span id=\"next_badge_count\"></span> sentences to unlock your <span id=\"next_badge_name_1\"></span> Badge. <a href=\"./badges.html\">Know more</a>": "Your next goal is to reach <span id=\"next_badge_count\"></span> sentences to unlock your <span id=\"next_badge_name_1\"></span> Badge. <a href=\"./badges.html\">Know more</a>",
+	"Did you know?": "Did you know?",
+	"Most Contributed - <span id=\"languageId\"></span>": "Most Contributed - <span id=\"languageId\"></span>",
+	"Data recorded for <span id=\"languageChoiceId\"></span>": "Data recorded for <span id=\"languageChoiceId\"></span>",
+	"Help your language achieve it’s goal of 100 hrs. We know you can do more!": "Help your language achieve it’s goal of 100 hrs. We know you can do more!",
+	"Thank you for your enthusiasm to validate the recordings.": "Thank you for your enthusiasm to validate the recordings.",
+	"We do not have any data in <span id=\"spn-validation-language\"></span> language. Please try again later.": "We do not have any data in <span id=\"spn-validation-language\"></span> language. Please try again later.",
+	"Start Contributing in <span id=\"start-validation-language\"></span>": "Start Contributing in <span id=\"start-validation-language\"></span>",
+	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings",
+	"Please test your <b>speakers</b>": "Please test your <b>speakers</b>",
+	"Help us understand what’s wrong with the recording": "Help us understand what’s wrong with the recording"
 }
