--- a/locales/en.json
+++ b/locales/en.json
@@ -208,5 +208,10 @@
 	"Match the voice to the text <b>accurately</b>": "Match the voice to the text <b>accurately</b>",
 	"If you are unsure of the match, skip the particular voice sample": "If you are unsure of the match, skip the particular voice sample",
 	"START": "START",
-	"Help us understand what’s wrong with the recording": "Help us understand what’s wrong with the recording"
+	"Help us understand what’s wrong with the recording": "Help us understand what’s wrong with the recording",
+	"Earn badges or certificate by contributing to Bolo India. Speak a sentence in language of your choice or validate the sentence that is spoken on your desired language. Share badges in your social circle, build the hype, motivate your friends and family to contribute towards the cause. The strength of Bolo India is in the diversity of the people i.e. <b>YOU.</b>": "Earn badges or certificate by contributing to Bolo India. Speak a sentence in language of your choice or validate the sentence that is spoken on your desired language. Share badges in your social circle, build the hype, motivate your friends and family to contribute towards the cause. The strength of Bolo India is in the diversity of the people i.e. <b>YOU.</b>",
+	"The levels defined by an overall mix of contributions and validations on Bolo India. Please see the criteria that defines different levels below:": "The levels defined by an overall mix of contributions and validations on Bolo India. Please see the criteria that defines different levels below:",
+	"Please note that your levels and badges may take upto 48hrs to update. Your contribution does not expire, but may decrease though if it doesn’t pass the validation test. We want you to remain an active contributor to Bolo India and stand a chance to get recognised by the Ministry of Electronics and Information Technology.": "Please note that your levels and badges may take upto 48hrs to update. Your contribution does not expire, but may decrease though if it doesn’t pass the validation test. We want you to remain an active contributor to Bolo India and stand a chance to get recognised by the Ministry of Electronics and Information Technology.",
+	"Recording: X sentence": "Recording: %count sentence",
+	"Validation: Y% of recorded X sentences need to be 'correct'": "Validation: %ValidationPercent of recorded %count sentences need to be 'correct'"
 }
