--- a/locales/hi.json
+++ b/locales/hi.json
@@ -160,7 +160,7 @@
 	"Playingback Audio": "ऑडियो प्ले किया जा रहा है",
 	"Playing": "प्लेइंग",
 	"You are a champion": "आप एक चैंपियन हैं",
-	"WooHoo!! You took the first important step": "शाबाश!! अपने पहला महत्वपूर्ण कदम उठा लिया है",
+	"WooHoo!! You took the first important step": "शाबाश!! आपने पहला महत्वपूर्ण कदम उठा लिया है",
 	"recordings contributed": "रिकॉर्डिंग का योगदान किया गया",
 	"You are just <span id=\"remainingSentences\"></span> sentences away from earning your <span id=\"badgeName\"></span> Badge.": "You are just <span id=\"remainingSentences\"></span> sentences away from earning your <span id=\"badgeName\"></span> Badge.",
 	"Did you know?": "क्या आप जानते हैं?",
@@ -224,7 +224,7 @@
 	"Select the language for voluntary contribution": "अपना योगदान देने के लिए भाषा चुनें",
 	"Please speak clearly": "कृपया साफ़-साफ़ बोलें",
 	"Low/No Background Noise": "आस-पास में शोर कम/बिल्कुल नहीं है",
-	"Background Noise Detected": "बैकग्राउंड में शोर कम/बिल्कुल नहीं है",
+	"Background Noise Detected": "बैकग्राउंड में शोर है",
 	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback.": "आपका फ़ीडबैक बोलो इंडिया को आपके काम का ऐप्लिकेशन बनाए रखने में हमारी मदद करता है। आपने अपना कीमती समय निकालकर फ़ीडबैक दिया, इसके लिए हम आपकी सराहना करते हैं।",
 	"Congratulations! You have validated a batch of recordings!": "बधाई हो! आपके रिकॉर्डिंग के एक बैच की पुष्टि कर दी है।",
 	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback": "आपका फ़ीडबैक बोलो इंडिया को आपके काम का ऐप्लिकेशन बनाए रखने में हमारी मदद करता है। आपने अपना कीमती समय निकालकर फ़ीडबैक दिया, इसके लिए हम आपकी सराहना करते हैं।",
